Fix initial flickering

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,13 @@ h2.slide-btm-text{
     color: #fff;
     text-transform: uppercase;
 }
+/* STOIC: fix for initial flickering */
+.main-flex-slider li{
+    width: 100%;
+    float: left;
+    margin-right: -100%;
+    opacity: 0;
+}
 .main-flex-slider h1{
     font-size: 5em;
     color: #fff;
